# rdma-core

./: CMakeLists.txt  README-FreeBSD.txt  build-freebsd.sh
.github/workflows/: freebsd-ci.yml
buildlib/: FindLDSymVer.cmake  config.h.in  make_abi_structs.py  rdma_functions.cmake
debian/: changelog
freebsd-headers/: CMakeLists.txt  alloca.h  errno.h  limits.h  string.h
freebsd-headers/linux/: if_ether.h  in.h  in6.h  ip.h  netlink.h  rtnetlink.h  socket.h  stddef.h  types.h
freebsd-headers/netinet/: in.h  tcp.h
freebsd-headers/sys/: mman.h  sendfile.h  shm.h  socket.h  sysmacros.h
infiniband-diags/: CMakeLists.txt  ibaddr.c  ibdiag_common.c  ibstat.c  saquery.c
kernel-headers/: CMakeLists.txt
kernel-headers/rdma/: mlx5-abi.h
libibmad/: mad.h  portid.c  resolve.c
libibumad/tests/: umad_sa_mcm_rereg_test.c
libibverbs/: CMakeLists.txt  cmd_ioctl.h  ibverbs.h  init-sysctl.c  init-sysfs.c  init.c  memory.c  neigh.c  sysfs-sysctl.c  verbs.c
libibverbs/examples/: devinfo.c  xsrq_pingpong.c
librdmacm/: CMakeLists.txt  indexer.h  preload.c  rsocket.c
librdmacm/examples/: CMakeLists.txt
providers/ionic/: ionic.h  ionic_verbs.c
providers/mlx5/: qp.c
providers/rxe/: rxe.c  rxe.h
providers/vmw_pvrdma/: pvrdma.h
pyverbs/providers/mlx5/: dr_action.pyx
redhat/: rdma-core.spec
suse/: rdma-core.spec
